--- a/package.json
+++ b/package.json
@@ -2,11 +2,58 @@
   "name": "daily_quotes_v2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cypress-test": "cypress run --browser chrome --spec .\\tests\\cypress\\e2e\\dailyQuotesTests",
+    "cypress-email": "cypress run --browser chrome --spec .\\tests\\cypress\\e2e\\emailTests",
+    "test-unit": "set DOTENV_CONFIG_PATH=.\\configs\\.env.development&& jest --setupFiles dotenv/config --testTimeout=10000 --runInBand --detectOpenHandles --testPathPattern=tests/unit",
+    "test-int": "set DOTENV_CONFIG_PATH=.\\configs\\.env.development&& jest --setupFiles dotenv/config --testTimeout=10000 --runInBand --detectOpenHandles --testPathPattern=tests/integration",
+    "test": "jest --testTimeout=10000  --detectOpenHandles",
+    "send-emails-dev": "set NODE_ENV=development&& node -r dotenv/config .\\src\\scripts\\sendQuoteEmails.js dotenv_config_path=.\\configs\\.env.development",
+    "seed-users-dev": "set NODE_ENV=development&& node -r dotenv/config .\\src\\scripts\\seedUsers.js 10 dotenv_config_path=.\\configs\\.env.development",
+    "seed-users-prod": "set NODE_ENV=productiont&& node -r dotenv/config .\\src\\scripts\\seedUsers.js 1 dotenv_config_path=.\\configs\\.env.production",
+    "seed-one-user": "set NODE_ENV=development&& node -r dotenv/config .\\src\\scripts\\seedUsers.js 1 dotenv_config_path=.\\configs\\.env.development",
+    "seed-all-quotes-dev": "set NODE_ENV=development&& node -r dotenv/config .\\src\\scripts\\seedQuotes.js -all dotenv_config_path=.\\configs\\.env.development",
+    "seed-one-quote": "set NODE_ENV=development&& node -r dotenv/config .\\src\\scripts\\seedQuotes.js 1 dotenv_config_path=.\\configs\\.env.development",
+    "seed-all-quotes-prod": "set NODE_ENV=production&& node -r dotenv/config .\\src\\scripts\\seedQuotes.js -all dotenv_config_path=.\\configs\\.env.production",
+    "start": "set NODE_ENV=production&& node -r dotenv/config server.js dotenv_config_path=.\\configs\\.env.production",
+    "dev": "set NODE_ENV=development&& nodemon -r dotenv/config server.js dotenv_config_path=.\\configs\\.env.development"
   },
   "keywords": [],
   "author": "Spencer Thomason <spencerdispenced@gmail.com>",
-  "license": "ISC"
+  "license": "MIT",
+  "dependencies": {
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.0.0",
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
+    "ejs-mate": "^4.0.0",
+    "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-session": "^1.17.3",
+    "helmet": "^7.0.0",
+    "joi": "^17.9.1",
+    "jsonwebtoken": "^9.0.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.8.2",
+    "nodemailer": "^6.8.0",
+    "sanitize-html": "^2.10.0"
+  },
+  "devDependencies": {
+    "axios": "^1.2.2",
+    "cheerio": "^1.0.0-rc.12",
+    "cypress": "^12.8.1",
+    "cypress-mongodb": "^5.2.1",
+    "cypress-recurse": "^1.31.2",
+    "imapflow": "^1.0.127",
+    "jest": "^29.5.0",
+    "lodash": "^4.17.21",
+    "mailparser": "^3.6.4",
+    "mongodb-memory-server": "^8.12.2",
+    "prettier": "2.8.7",
+    "supertest": "^6.3.3"
+  },
+  "jest": {
+    "testEnvironment": "node"
+  }
 }
