--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,6 @@ configs/
 /tests/cypress/fixtures
 /tests/cypress/e2e/1-getting-started
 /tests/cypress/e2e/2-advanced-examples
+
+# Other
+!package-lock.json
