--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
+    "mongodb": "^5.4.0",
     "mongoose": "^6.8.2",
     "nodemailer": "^6.8.0",
     "sanitize-html": "^2.10.0"
