--- a/.github/workflows/CIPipeline.yml
+++ b/.github/workflows/CIPipeline.yml
@@ -1,5 +1,5 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+
+# Build and run unit and integration tests
 
 name: DailyQuotes CI
 
@@ -25,12 +25,3 @@ jobs:
       run: |
         echo "${{ secrets.ENV_FILE }}" > .env
     - run: npm test
-
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to production
-        uses: johnbeynon/render-deploy-action@v0.0.8
-        with:
-          service-id: ${{ secrets.RENDER_SERVICE_ID }}
-          api-key: ${{ secrets.RENDER_API_KEY }}
