Added continuous deployment

--- a/.github/workflows/CIPipeline.yml
+++ b/.github/workflows/CIPipeline.yml
@@ -25,3 +25,14 @@ jobs:
       run: |
         echo "${{ secrets.ENV_FILE }}" > .env
     - run: npm test
+    name: Deploy
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.RENDER_SERVICE_ID }}
+          api-key: ${{ secrets.RENDER_API_KEY }}
