--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "test-unit": "set DOTENV_CONFIG_PATH=.\\configs\\.env.development&& jest --setupFiles dotenv/config --testTimeout=10000 --runInBand --detectOpenHandles --testPathPattern=tests/unit",
     "test-int": "set DOTENV_CONFIG_PATH=.\\configs\\.env.development&& jest --setupFiles dotenv/config --testTimeout=10000 --runInBand --detectOpenHandles --testPathPattern=tests/integration",
     "test": "jest --testTimeout=10000  --detectOpenHandles --setupFiles dotenv/config",
+
     "send-emails-dev": "set NODE_ENV=development&& node -r dotenv/config .\\src\\scripts\\sendQuoteEmails.js dotenv_config_path=.\\configs\\.env.development",
     "seed-users-dev": "set NODE_ENV=development&& node -r dotenv/config .\\src\\scripts\\seedUsers.js 10 dotenv_config_path=.\\configs\\.env.development",
-    "seed-one-user": "set NODE_ENV=development&& node -r dotenv/config .\\src\\scripts\\seedUsers.js 1 dotenv_config_path=.\\configs\\.env.development",
+    "seed-one-user-dev": "set NODE_ENV=development&& node -r dotenv/config .\\src\\scripts\\seedUsers.js 1 dotenv_config_path=.\\configs\\.env.development",
     "seed-all-quotes-dev": "set NODE_ENV=development&& node -r dotenv/config .\\src\\scripts\\seedQuotes.js -all dotenv_config_path=.\\configs\\.env.development",
+
     "seed-all-quotes-prod": "set NODE_ENV=production&& node -r dotenv/config .\\src\\scripts\\seedQuotes.js -all dotenv_config_path=.\\configs\\.env.production",
     "start": "set NODE_ENV=production&& node -r dotenv/config server.js dotenv_config_path=.\\configs\\.env.production",
-    "dev": "set NODE_ENV=development&& nodemon -r dotenv/config server.js dotenv_config_path=.\\configs\\.env.development"
+    "dev": "set NODE_ENV=development&& nodemon -r dotenv/config server.js dotenv_config_path=.\\configs\\.env.development",
+
+    "send-emails-test": "set NODE_ENV=development&& node -r dotenv/config ./src/scripts/sendQuoteEmails.js",
+    "seed-one-user-test": "set NODE_ENV=development&& node -r dotenv/config ./src/scripts/seedUsers.js 1",
+    "start-test": "set NODE_ENV=development&& node -r dotenv/config server.js"
   },
   "keywords": [],
   "author": "Spencer Thomason <spencerdispenced@gmail.com>",
